# limux

./: Cargo.toml  PKGBUILD-source.template  PKGBUILD.template  README.md  dependency-policy-plan.md  keyboard-shortcut-expansion-plan.md  tab-dnd-swarm-plan.md  ubuntu-22-04-full-parity-support-plan.md  workspace-layout-persistence-plan.md
.github/workflows/: aur-publish.yml  release-linux.yml  release-rpm.yml  rust-quality.yml
docs/: linux-port-architecture.md
linux/: .gitignore  Cargo.toml  README.md
linux/rust/: README.md
linux/rust/cmux-cli/src/: main.rs
linux/rust/cmux-core/: README.md
linux/rust/cmux-core/src/: lib.rs
linux/rust/cmux-ghostty-sys/: build.rs
linux/rust/cmux-host-linux/: Cargo.toml
linux/rust/cmux-host-linux/src/: main.rs  pane.rs  terminal.rs  window.rs
linux/scripts/: package.sh
rust/limux-control/src/: auth.rs  server.rs  socket_path.rs
rust/limux-core/src/: lib.rs
rust/limux-ghostty-sys/src/: lib.rs
rust/limux-host-linux/: Cargo.toml  dev.limux.linux.desktop  dev.limux.linux.metainfo.xml
rust/limux-host-linux/src/: app_config.rs  control_bridge.rs  layout_state.rs  main.rs  pane.rs  settings_editor.rs  shortcut_config.rs  split_tree.rs  terminal.rs  window.rs
scripts/: package.sh
